# 15418-Parallel-Pagerank

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  mtmetis-test
common/: graph.cpp
docs/: README.md
graph-files/: test.graph.part.3  test.graph.part.64  test.snap
include/: Exception.hpp  common.h  graph.h  graph_partition.h  mtmetis.h  page_rank.h
include/common/: graph.h  graph_internal.h
include/fixgraph/: gk_proto.h  gk_struct.h
include/graph/: SNAPFile.hpp  TextFile.hpp  graph.h  metis_graph.h  mtmetis-test.h
include/metis/: mtmetis.h  wildriver.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  graph_partition.cpp  main.cpp  mtmetis-test  mtmetis-test.cpp  page_rank.cpp  pagerank_main.cpp  parallel-pagerank.cpp
src/graph/: CMakeLists.txt  SNAPFile.cpp  TextFile.cpp  graph.cpp
src/src/graph/: Makefile
test/: Readme.md  Wiki-Vote.snap  hollins.snap  hollins10105.snap  hollins15000.snap  hollins15000.txt  hollins23875.snap  p2p-Gnutella04.txt  test.snap  test10.snap  test100.snap  test25.snap  test5.snap
tools/: graphTools  hollins copy.txt  hollins10050.txt  test10.txt  test100.txt  test25.txt  test5.txt
